qq登录实现 欠缺认证获取appId和appKey（待开发